--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script src="script.js"></script>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div class="container">
-		<form action="index.html" method="post">
-			<label for="task">Новая задача</label>
-			<input type="text" id="task" name="newTask" placeholder="Введите задачу">
-			<button type="submit"></button>
-		</form>
-	</div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+        <div class="container">
+            <!-- <div class=""> -->
+            <form class="form" action="index.html" method="post">
+                <label for="task">Новая задача</label>
+                <input
+                    type="text"
+                    id="task"
+                    name="newTask"
+                    placeholder="Введите задачу"
+                />
+                <button type="submit">Добавить задачу</button>
+            </form>
+            <!-- </div> -->
+            <div class="list-task">
+                <h2 class="list-task__h2">Список задач</h2>
+            </div>
+        </div>
+    </body>
 </html>
